# CVD-Blockchain-ML

./: .gitignore  LICENSE  Makefile  README.md
contracts/record-manager/: Cargo.toml
contracts/record-manager/.cargo/: config
contracts/record-manager/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/registry/: Cargo.toml
contracts/registry/.cargo/: config
contracts/registry/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
