[package]
name = "record-manager"
version = "0.1.0"
edition = "2021"
description = "Record Manager contract responsible for storing cardiovascular patient records"
license = "MIT"
repository = "https://github.com/UT-MSc-Thesis/CVD-Blockchain-ML"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.10" }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.1.10" }
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
secret-toolkit = { version = "0.10.0", default-features = false, features = ["storage", "permit"] }
thiserror = "1"
schemars = "0.8.1"