[package]
name = "registry"
version = "0.1.0"
edition = "2021"
description = "Registry contract responsible for keeping track of patient identities"
license = "MIT"
repository = "https://github.com/UT-MSc-Thesis/CVD-Blockchain-ML"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "1.4.0", features = ["staking"] }
serde = { version = "1.0.188", default-features = false, features = ["derive"] }

[dev-dependencies]
cw-multi-test = "0.13.4"
