[package]
name = "registry"
version = "0.1.0"
edition = "2021"
description = "Registry contract responsible for keeping track of patient identities"
license = "MIT"
repository = "https://github.com/UT-MSc-Thesis/CVD-Blockchain-ML"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.11-secret" }
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
