[package]
name = "registry"
version = "0.1.0"
edition = "2021"
description = "Registry contract responsible for keeping track of patient identities"
license = "MIT"
repository = "https://github.com/UT-MSc-Thesis/CVD-Blockchain-ML"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.10" }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.1.10" }
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
secret-toolkit = { version = "0.10.0", default-features = false, features = ["utils", "storage", "serialization"] }
thiserror = "1"